[gd_scene load_steps=29 format=2]

[ext_resource path="res://escenas/menu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://asset/Fondo con nubes.png" type="Texture" id=3]
[ext_resource path="res://escenas/fondo.gd" type="Script" id=4]
[ext_resource path="res://escenas/sol.tscn" type="PackedScene" id=5]
[ext_resource path="res://asset/Logo Comunicar no es un juego.png" type="Texture" id=6]
[ext_resource path="res://asset/BotonPlaynormal.png" type="Texture" id=7]
[ext_resource path="res://asset/BotonPlayprecionado.png" type="Texture" id=8]
[ext_resource path="res://asset/botonSonidoactivo.png" type="Texture" id=9]
[ext_resource path="res://asset/botonSonidodesactivado.png" type="Texture" id=10]
[ext_resource path="res://asset/botoninfonormal.png" type="Texture" id=11]
[ext_resource path="res://asset/botoninfoprecionado.png" type="Texture" id=12]
[ext_resource path="res://asset/Botonsalirnormal.png" type="Texture" id=13]
[ext_resource path="res://asset/Botonsalirprecionado.png" type="Texture" id=14]
[ext_resource path="res://asset/creditos.png" type="Texture" id=15]
[ext_resource path="res://asset/Boton atras1_desplazamiento.png" type="Texture" id=16]
[ext_resource path="res://asset/Boton atras2_desplazamiento.png" type="Texture" id=17]
[ext_resource path="res://asset/Colored Crayons.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://asset/1_Snowland_Loop_Short_Splash_Screen.ogg" type="AudioStream" id=19]
[ext_resource path="res://asset/ButomPressSound.ogg" type="AudioStream" id=20]

[sub_resource type="Animation" id=1]
resource_name = "animacion_sc"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("fondo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0178089, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "credito"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 57.6519, 605.481 ), Vector2( 52.5043, 47.5824 ), Vector2( 52.5043, 47.5824 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelContainer/Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PanelContainer/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PanelContainer/tex_creditos:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "play"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00269817, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 3.0
step = 1.0

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("fondo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0138999, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 52.5043, 47.5824 ), Vector2( 70.5294, 710.908 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelContainer/Button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PanelContainer/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PanelContainer/tex_creditos:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "sol"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5, 2.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 359.0 ]
}

[sub_resource type="DynamicFont" id=8]
size = 40
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 18 )

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -17.0
margin_top = -4.0
margin_right = 1024.0
margin_bottom = 615.0

[node name="play" type="Button" parent="."]
visible = false
margin_left = 512.378
margin_top = 462.241
margin_right = 586.378
margin_bottom = 520.241

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 550.503, 494.434 )
texture = ExtResource( 2 )

[node name="creditos" type="Button" parent="."]
visible = false
margin_left = 329.41
margin_top = 458.953
margin_right = 409.41
margin_bottom = 515.953

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animacion_sc = SubResource( 1 )
anims/credito = SubResource( 2 )
anims/play = SubResource( 3 )
anims/precentacion = SubResource( 4 )
anims/salir = SubResource( 5 )
anims/salir_creditos = SubResource( 6 )

[node name="fondo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 514.285, 306.075 )
scale = Vector2( 0.340881, 0.319631 )
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="sol" parent="fondo" instance=ExtResource( 5 )]
position = Vector2( 1114.4, -136.075 )

[node name="Animationsol" type="AnimationPlayer" parent="fondo/sol"]
autoplay = "sol"
anims/sol = SubResource( 7 )

[node name="logo" type="Sprite" parent="fondo"]
texture = ExtResource( 6 )

[node name="play" type="TextureButton" parent="fondo"]
margin_left = -636.002
margin_top = 407.631
margin_right = -160.002
margin_bottom = 821.631
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="sonido" type="TextureButton" parent="fondo"]
margin_left = -1540.92
margin_top = 521.368
margin_right = -1064.92
margin_bottom = 934.368
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="info" type="TextureButton" parent="fondo"]
margin_left = 6.47681
margin_top = 453.0
margin_right = 310.477
margin_bottom = 790.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="salir" type="TextureButton" parent="fondo"]
margin_left = 1113.99
margin_top = 599.354
margin_right = 1417.99
margin_bottom = 936.354
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )

[node name="PanelContainer" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 511.791, 313.096 )
scale = Vector2( 0.339031, 0.307852 )
texture = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="PanelContainer"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 449.87, 249.928 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 15 )

[node name="Button" type="TextureButton" parent="PanelContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 510.263
margin_top = 501.619
margin_right = 986.266
margin_bottom = 915.619
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )

[node name="Label" type="Label" parent="PanelContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -689.632
margin_top = -317.554
margin_right = -44.6322
margin_bottom = 102.446
custom_fonts/font = SubResource( 8 )
text = "Game Design												                            
Nestor Arriola														                    
																			                    


Programador
Joel Bello

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tex_creditos" type="Label" parent="PanelContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 82.6354
margin_top = -358.444
margin_right = 727.638
margin_bottom = 61.5563
custom_fonts/font = SubResource( 8 )
text = "Artistas
Prisila Scavino
Enzo

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -7.068
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="fondo/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="fondo/sonido" to="." method="_on_sonido_pressed"]
[connection signal="pressed" from="fondo/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="fondo/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="PanelContainer/Button" to="." method="_on_Button_pressed"]
